--- a/README
+++ b/README
@@ -40,7 +40,7 @@ Note that you must edit the config file with right parameter before executing...
 # 5. Author
 # =========
 
-see AUTHORS
+Guillaume Pellerin <yomguy@parisson.com>
 
 
 # 6. Aknowledgements
