--- a/README
+++ b/README
@@ -7,9 +7,11 @@ d-fuzz : a lightweight icecast streaming client written in python
 # 1. Introduction
 # ===============
 
-D-Fuzz is a light python program that streams media data from disks to icecast2 with some metadata. It supports MP3, OGG, SPEEX and THEORA media.
+D-Fuzz is a light python program that streams media data from disks to icecast2
+with some metadata. It supports MP3, OGG, SPEEX and THEORA media.
 
-It is neccessary to provide a config file which sets all needed parameters (see myfuzz.xml for example).
+It is neccessary to provide a config file which sets all needed parameters
+(see example/myfuzz.xml for example).
 
 
 # 2. Installation
@@ -34,8 +36,11 @@ Usage : d-fuzz $1
   where $1 is the path for a XML config file
   ex: d-fuzz ./myfuzz.xml
 
-Note that you must edit the config file with right parameter before executing...
+Note that you must edit the config file with right parameters before executing...
 
+Be carefull : at the moment the Thread implementation raises exceptions when
+shutting down with CTRL + C...
+You have then to kill each stream manually or make a full `pkill d-fuzz` .
  
 # 5. Author
 # =========
@@ -47,10 +52,15 @@ Guillaume Pellerin <yomguy@parisson.com>
 # ==================
 
 This work is inspired by the great - C - Oddsock's streaming program : Ezstream.
-Since I needed to patch it in order to modify the playlist (randomize for example) and make external batch tools to create multiple channels, I decided to rewrite it from scratch in python. Some parts of this work are also taken from another Parisson's project : Telemeta (see http://svn.parisson.org/telemeta).
+Since I needed to patch it in order to modify the playlist (randomize for example)
+and make external batch tools to create multiple channels, I decided to rewrite it
+from scratch in python.
+Some parts of this work are also taken from another Parisson's project : Telemeta
+(see http://svn.parisson.org/telemeta).
 
 
 # 7. Contact / Infos
 # ==================
 
-see http://parisson.com/d-fuzz/ for more details
+see http://svn.parisson.org/d-fuzz/  or  http://parisson.com  for more details
+
