--- a/INSTALL
+++ b/INSTALL
@@ -5,17 +5,22 @@
 #
 # This software is licensed as described in the file COPYING, which
 # you should have received as part of this distribution. The terms
-# are also available at http://svn.parisson.org/d-fuzz/DFuzzLicense.
+# are also available at http://svn.parisson.org/deefuzz/DeeFuzzLicense.
 #
 # Author: Guillaume Pellerin <pellerin@parisson.com>
 
- depends : python, python-xml, python-shout | shout-python, libshout3, icecast2
+ depends : python, python-dev, python-xml, python-shout | shout-python, libshout3, libshout3-dev, icecast2
  recommends : python-mutagen
  provides : shout-python
 
-python-shout is included in DeFuzz but needs to be compiled.
+python-shout is included in DeeFuzz but needs to be compiled and installed.
 As explained in shout-python/INSTALL, you just have to run this command :
 
   $ cd shout-python
   $ sudo python setup.py install
-  
+
+To install deefuzz (from the main deefuzz directory) :
+
+  $ sudo python install.py
+
+For more informations, see http://svn.parisson.org/deefuzz/
