--- a/README
+++ b/README
@@ -7,11 +7,20 @@ deefuzz : an easy and light media streaming tool
 # 1. Introduction
 # ===============
 
-DeeFuzz is a light python program that streams media data from file systems to icecast2
-with the metadata. It supports MP3, OGG, SPEEX and THEORA media.
+DeeFuzz Tools are new light and easy tools to stream audio and video over internet. It is dedicated to people who wants to create playlisted webradios or webTVs with rich media contents. It depends on python, icecast2 server, libshout and some other tools.
+
+Here are the main features of the DeeFuzz Tools:
+
+ * MP3 and OGG (audio & video) streaming over internet
+ * Full metadata encapsulation and management
+ * RSS podcast feeding (current tracks and playlists)
+ * M3U playlist feefing
+ * Multi-theading architecture (multiple stations now authorized)
+ * Optional random (shuffled) playlists
+ * VERY light and optimized streaming process !
 
 It is neccessary to provide a config file which sets all needed parameters
-(see example/myfuzz.xml for example).
+(see example/myfuzz.xml for an example).
 
 
 # 2. Installation
