--- a/README
+++ b/README
@@ -89,5 +89,5 @@ See COPYING
 # 8. Contact / Infos
 # ==================
 
-see http://svn.parisson.org/deefuzz/ or http://parisson.com for more details...
+see http://svn.parisson.org/deefuzz/ or http://parisson.com for more info.
 
