--- a/README
+++ b/README
@@ -11,7 +11,7 @@ DeeFuzz Tools are new light and easy tools to stream audio and video over intern
 
 Here are the main features of the DeeFuzz Tools:
 
- * MP3 and OGG (audio & video) streaming over internet
+ * MP3 and OGG (audio & video) file streaming over internet
  * Full metadata encapsulation and management
  * RSS podcast feeding (current tracks and playlists)
  * M3U playlist feefing
