--- a/INSTALL
+++ b/INSTALL
@@ -5,7 +5,7 @@
 #
 # This software is licensed as described in the file COPYING, which
 # you should have received as part of this distribution. The terms
-# are also available at http://svn.parisson.org/deefuzz/DeeFuzzLicense.
+# are also available at http://svn.parisson.org/deefuzzer/DeeFuzzLicense.
 #
 # Author: Guillaume Pellerin <pellerin@parisson.com>
 
@@ -15,14 +15,14 @@
  provides : shout-python
 
 python-shout is included in DeeFuzz but needs to be compiled and installed
-if you don't install deefuzz from its debian package with aptitude.
+if you don't install deefuzzer from its debian package with aptitude.
 As explained in shout-python/INSTALL, you just have to run this command :
 
   $ cd shout-python
   $ sudo python setup.py install
 
-To install deefuzz (from the main deefuzz directory) :
+To install deefuzzer (from the main deefuzzer directory) :
 
   $ sudo python install.py
 
-For more informations, see http://svn.parisson.org/deefuzz/
+For more informations, see http://svn.parisson.org/deefuzzer/
