--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+d-fuzz (0.3.3-1) unstable; urgency=low
+
+  * add twitter api
+  * cleanup RSS and song metadata
+
+ -- momo <momo@wm16.parisson.org>  Tue, 27 Oct 2009 13:44:06 +0100
+
 d-fuzz (0.3.0-1) unstable; urgency=low
 
   * new and much upgraded DeeFuzz
