--- a/INSTALL
+++ b/INSTALL
@@ -9,10 +9,12 @@
 #
 # Author: Guillaume Pellerin <pellerin@parisson.com>
 
- depends : python, python-dev, python-xml, python-shout | shout-python, libshout3,
-           libshout3-dev, icecast2 python-mutagen, python-twitter, python-tinyurl
+ depends:  python, python-dev, python-xml, python-shout | shout-python, libshout3,
+           libshout3-dev, icecast2, python-mutagen
 
- provides : shout-python
+ recommends: python-twitter, python-tinyurl, python-liblo | pyliblo (>= 0.26)
+
+ provides:  shout-python
 
 python-shout is included in the DeeFuzzer but needs to be compiled and installed
 if you don't install deefuzzer from its debian package with aptitude.
