fix README again

--- a/README
+++ b/README
@@ -80,26 +80,26 @@ We can now control some functions of the deefuzzer with external commands
 coming from an OSC client. These are accessible only if the "control" tag is
 set up in the config file (see example/myfuzz.xml again...).
 
- * Next track::
-     $ python tools/osc_next.py
+Next track::
+$ python tools/osc_next.py
 
- * Start twitting::
-     $ python tools/osc_twitter_start.py
+Start twitting::
+$ python tools/osc_twitter_start.py
 
- * Stop twitting::
-     $ python see tools/osc_twitter_stop.py
+Stop twitting::
+$ python see tools/osc_twitter_stop.py
 
- * Start relaying::
-     $ python tools/osc_relay_start.py
+Start relaying::
+$ python tools/osc_relay_start.py
 
- * Stop relaying::
-     $ python see tools/osc_relay_stop.py
+Stop relaying::
+$ python see tools/osc_relay_stop.py
 
- * Start jingling::
-     $ python see tools/osc_jingles_start.py
+Start jingling::
+$ python see tools/osc_jingles_start.py
 
- * Stop jingling::
-     $ python see tools/osc_jingles_stop.py
+Stop jingling::
+$ python see tools/osc_jingles_stop.py
 
 
 Author
