--- a/README
+++ b/README
@@ -76,82 +76,8 @@ $ kill -9 `pgrep deefuzzer`
 XML Configuration
 =================
 
-Example ::
-
-<deefuzzer>
-    <!-- A path to the log file (need directory write access rights) -->
-    <log>/path/to/log/mystation.log</log>
-
-    <!-- A path to the M3U playlist file (need directory write access rights).
-         The file is preferably accessible behind an url,
-         for example, http://mydomain.com/m3u/mystation.m3u -->
-    <m3u>/path/to/m3u/mystation.m3u</m3u>
-
-    <station>
-        <infos>
-            <!-- The short name of the station. It will define the mount point,
-                 for example http://mydomain.com:8000/my_station.mp3 -->
-            <short_name>my_station</short_name>
-
-            <!-- The name (title) of the station -->
-            <name>My best funky station</name>
-
-            <!-- The description of the station -->
-            <description>My personal best funky playlist ever !</description>
-
-            <!-- The website of the station (for metadata) -->
-            <url>http://mydomain.com</url>
-
-            <!-- The genres of the audio streams -->
-            <genre>Various Funk Groove</genre>
-        </infos>
-
-        <server>
-            <!-- The host to send the stream (domain or IP) -->
-            <host>mydomain.com</host>
-            <!-- The port of the Icecast2 server on the host -->
-            <port>8000</port>
-            <!-- The source password of the Icecast2 server on the host -->
-            <sourcepassword>icecast_source_password</sourcepassword>
-            <!-- If 1, the mount point will be public on yp.icecast.org, 0 for a private stream -->
-            <public>1</public>
-        </server>
-
-        <media>
-
-            <dir>/path/to/mp3/</dir>
-            <format>mp3</format>
-            <bitrate>192</bitrate>
-            <ogg_quality>7</ogg_quality>
-            <samplerate>44100</samplerate>
-            <voices>2</voices>
-            <shuffle>1</shuffle>
-        </media>
-        <rss>
-            <dir>/path/to/rss/</dir>
-            <enclosure>1</enclosure>
-        </rss>
-        <twitter>
-            <mode>0</mode>
-            <user>my_twitter_user</user>
-            <pass>my_twitter_password</pass>
-            <tags>bla bla</tags>
-        </twitter>
-        <jingles>
-            <mode>0</mode>
-            <dir>/path/to/jingles</dir>
-            <shuffle>1</shuffle>
-        </jingles>
-        <control>
-            <mode>0</mode>
-            <port>1234</port>
-        </control>
-        <relay>
-            <mode>0</mode>
-            <url>http://anotherdomain.com:8000/stream.mp3</url>
-        </relay>
-    </station>
-</deefuzzer>
+See example/myfuzz.xml in a text editor.
+The inline comments should help you to configure your stations
 
 
 OSC Control
