add recoder, fix some id3 bugs

--- a/README
+++ b/README
@@ -77,7 +77,7 @@ XML Configuration
 =================
 
 See example/myfuzz.xml in a text editor.
-The inline comments should help you to configure your stations
+The inline comments should help you to configure your stations.
 
 
 OSC Control
