--- a/INSTALL
+++ b/INSTALL
@@ -10,11 +10,11 @@
 # Author: Guillaume Pellerin <pellerin@parisson.com>
 
  depends:  python, python-dev, python-xml, python-shout | shout-python, libshout3,
-           libshout3-dev, python-mutagen
+           libshout3-dev, python-mutagen, python-setuptools, python-twitter
 
  provides:  shout-python
 
- optional: python-twitter, python-tinyurl, python-liblo | pyliblo (>= 0.26)
+ optional: python-liblo | pyliblo (>= 0.26)
 
  recommends: icecast2
 
