--- a/INSTALL
+++ b/INSTALL
@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 #
-# Copyright (c) 2007-2009 Guillaume Pellerin <pellerin@parisson.com>
+# Copyright (c) 2007-2010 Guillaume Pellerin <pellerin@parisson.com>
 # All rights reserved.
 #
 # This software is licensed as described in the file COPYING, which
@@ -9,24 +9,62 @@
 #
 # Author: Guillaume Pellerin <pellerin@parisson.com>
 
- depends:  python, python-dev, python-xml, python-shout | shout-python, libshout3,
+
+Dependencies
+=============
+
+depends:  python, python-dev, python-xml, python-shout | shout-python, libshout3,
            libshout3-dev, python-mutagen
 
- provides:  shout-python
+provides:  shout-python | python-shout, python-tinyurl
 
- optional: python-twitter, python-tinyurl, python-liblo | pyliblo (>= 0.26)
+optional: python-twitter, python-liblo | pyliblo (>= 0.26)
 
- recommends: icecast2
+recommends: icecast2
 
-python-shout is included in the DeeFuzzer but needs to be compiled and installed
-if you don't install deefuzzer from its debian package with aptitude.
-As explained in shout-python/INSTALL, you just have to run this command :
 
-  $ cd shout-python
-  $ sudo python setup.py install
+Install
+=========
 
-To install the DeeFuzzer (from the main deefuzzer directory) :
-
-  $ sudo python install.py
+To install the DeeFuzzer, go to the main deefuzzer app directory, for example::
+    
+    cd deefuzzer-0.4.3
+    
+and run the python installer::
+    
+    sudo python install.py
 
 For more informations, see http://svn.parisson.org/deefuzzer/
+
+
+Twitter (optional)
+=====================
+
+To get track twitting, please install python-twitter, python-oauth2 and all their dependencies.
+As Twitter now requires oauth key system since 07/2010, you need to get your own access token key pair.
+Please run the dedicated script to do this::
+    
+    python tools/get_access_token.py
+    
+You will be invited to copy/paste an URL in your browser to get a pin code.
+Then copy/paste this code into the console and press ENTER.
+The script gives you a pair of keys : one access token key and one access token secret key.
+
+Change the <twitter> block options in your deefuzzer XML config file, giving the 2 keys. 
+For example::
+    
+    <twitter>
+            <mode>1</mode>
+            <key>85039615-H6yAtXXCx7NobF5W40FV0c8epGZsQGkE7MG6XRjD2</key>
+            <secret>A1YW3llB9H9qVbjH8zOQTOkMlhVqh2a7LnA9Lt0b6Gc</secret>
+            <tags>Music Groove</tags>
+    </twitter>
+    
+Your DeeFuzzer will now tweet the currently playing track and new tracks on your profile.
+
+
+OSC Control
+=============
+
+Working, but no doc yet. Please read the code :)
+
