--- a/INSTALL
+++ b/INSTALL
@@ -41,7 +41,19 @@ Twitter (optional)
 =====================
 
 To get track twitting, please install python-twitter, python-oauth2 and all their dependencies.
-As Twitter now requires oauth key system since 07/2010, you need to get your own access token key pair.
+
+Install python-oauth2::
+    
+    sudo easy_install oauth2
+
+Get and install python-twitter (>= 0.9dev)::
+    
+    sudo aptitude install mercurial
+    hg clone https://python-twitter.googlecode.com/hg/ python-twitter
+    cd python-twitter
+    sudo python setup.py install
+
+As Twitter access requires oauth keys since 07/2010, you need to get your own access token key pair.
 Please run the dedicated script to do this::
     
     python tools/get_access_token.py
