--- a/README
+++ b/README
@@ -8,7 +8,8 @@ deefuzzer : an easy and instant media streaming tool
 Introduction
 ============
 
-DeeFuzzer is a new light and instant software made for streaming audio and video over internet. It is dedicated to people who wants to create playlisted web radios or web TVs with rich media contents including some metadata.
+DeeFuzzer is a new light and instant software made for streaming audio and video over internet. 
+It is dedicated to people who wants to create playlisted web radios or web TVs with rich media contents including some metadata.
 
 Here are the main features of the deefuzzer:
 
